Fixed WebKit JS bug that returned "undefined" when looking up a reference with a chapter but no verse (i.e., John 2). Margin changed for WebKit compatibility. Shortened doctype to HTML 5 standards mode. Added a note in CSS on how to make Opera display drop-caps better.

--- a/styles/base.css
+++ b/styles/base.css
@@ -103,7 +103,11 @@ body {
 	/* Bold makes some letters better, esp. "P" */
 	/*font-weight: bold;*/
 	/* This fixes the spacing problem with some letters, especially capital J's. */
-	margin-bottom:-15px;
+	margin-bottom:-11px;
+	/* Opera needs this
+	margin-bottom:0px;
+	padding: 1px;
+	*/
 }
 /* Fixes a bug where the last word of the first verse somtimes wraps. */
 .first_verse {
