--- a/styles/base.css
+++ b/styles/base.css
@@ -94,7 +94,8 @@ body {
 
 /* Vereses created from a verse lookup. */
 .pslam_title {
-	margin: 0px 2em 19px 2em;
+	margin: 0px 2em 0px 2em;
+	padding-bottom: 19px;
 }
 
 /* Drop caps for the first letter of a chapter */
@@ -145,8 +146,8 @@ div.book {
 
 /* Main name for long title */
 h1 {
-	margin-top: 5px;
-	margin-bottom: 0px;
+	padding-top: 5px;
+	margin: 0;
 	font-size: 69px;
 	display: block;
 }
@@ -155,7 +156,7 @@ h1 {
 .d {
 	font-variant: small-caps;
 	font-size: 16px;
-	vertical-align: 0px;
+	vertical-align: 0;
 }
 
 /* Added (implied) words */
