Code cleanup.  Gave search box a transparent background.

--- a/styles/base.css
+++ b/styles/base.css
@@ -45,6 +45,10 @@ body {
 	font-size: 13px;
 }
 
+#q {
+	background: transparent url("images/90-white.png");
+}
+
 /* Individual words in verses */
 #page b {
 	font-weight: normal;
