Updated header comment block and explicitly mentioned license info.

--- a/styles/base.css
+++ b/styles/base.css
@@ -1,5 +1,10 @@
 /**
- * BibleForge (alpha testing)
+ * BibleForge
+ *
+ * @version 0.1 alpha 2
+ * @date    10-30-08
+ * @link http://BibleForge.com
+ * @license Reciprocal Public License (RPL)
  */
 
 html, body {
