--- a/styles/base.css
+++ b/styles/base.css
@@ -36,15 +36,22 @@ body {
 }
 
 #searchBar {
+	/* Transparent white background for browsers that don't support css gradients (Firefox 3.5-/IE/Opera). */
 	background-image: url("../images/90-white.png");
-	background: -moz-linear-gradient(top, bottom, from(rgba(255,255,255,.96)), to(rgba(255,255,255,.9)));
+	/* TODO: Make it work work with WebKit. */
+	/* Transparent white gradient (Firefox 3.6) */
+	/* NOTE: The gradient differs slightly from the image in that it has a quick fade to less transparent at the top. */
+	background: -moz-linear-gradient(top, rgba(255,255,255,.96), rgba(255,255,255,.92) 25%, rgba(255,255,255,.9));
 	width: 100%;
 	height: 100%;
 }
 
 #infoBar {
+	/* Transparent yellow background for browsers that don't support css gradients (Firefox 3.5-/IE/Opera). */
 	background-image: url("../images/90-yellow.png");
-	background: -moz-linear-gradient(top, bottom, from(rgba(255,255,221,.90)), to(rgba(255,255,221,.89)));
+	/* TODO: Make it work work with WebKit. */
+	/* Transparent yellow gradient (Firefox 3.6/WebKit?) */
+	background: -moz-linear-gradient(top, rgba(255,255,221,.90), rgba(255,255,221,.89));
 	border-top: #EEE999 solid 1px;
 	border-bottom: #EEE999 solid 1px;
 	width: 100%;
