--- a/styles/base.css
+++ b/styles/base.css
@@ -1,7 +1,7 @@
 /**
  * BibleForge
  *
- * @version 0.1 alpha 2
+ * @version 0.2 alpha
  * @date    10-30-08
  * @link http://BibleForge.com
  * @license Reciprocal Public License 1.5 (RPL1.5)
