Some CSS cleanup.

--- a/styles/base.css
+++ b/styles/base.css
@@ -32,8 +32,8 @@ body {
 
 .topBars {
 	position:	fixed;
-	top:		0px;
-	left:		0px;
+	top:		0;
+	left:		0;
 	width:		100%;
 	height:		30px;
 }
@@ -45,18 +45,18 @@ body {
 	background:	rgba(255,255,255,.9);
 	/* TODO: Determine if gradients increase CPU usage significantly? */
 	/* Transparent white gradient for Firefox 3.6+ */
-	background:	-moz-linear-gradient(top, rgba(255,255,255,.96), rgba(255,255,255,.92) 25%, rgba(255,255,255,.9));
+	background:	-moz-linear-gradient(top, rgba(255, 255, 255, .96), rgba(255, 255, 255, .92) 25%, rgba(255, 255, 255, .9));
 	/* Transparent white gradient for WebKit */
-	background:	-webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(255,255,255,.96)), color-stop(.25, rgba(255,255,255,.92)), color-stop(1, rgba(255,255,255,.9)));
+	background:	-webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(255, 255, 255, .96)), color-stop(.25, rgba(255, 255, 255, .92)), color-stop(1, rgba(255, 255, 255, .9)));
 	width:		100%;
 	height:		100%;
 }
 
 .infoBars {
 	/* A solid background for IE/Mozilla 2-/Opera 9.6- */
-	background:		rgb(255,255,221);
+	background:		rgb(255, 255, 221);
 	/* Transparent yellow background */
-	background:		rgba(255,255,221,.9);
+	background:		rgba(255, 255, 221, .9);
 	border-top: 	#EEE999 solid 1px;
 	border-bottom:	#EEE999 solid 1px;
 	width:			100%;
@@ -123,7 +123,7 @@ body {
 
 /* Verses created from a verse lookup. */
 .pslam_title {
-	margin:			0px 2em 0px 2em;
+	margin:			0 2em 0 2em;
 	padding-bottom:	19px;
 }
 
@@ -136,7 +136,7 @@ body {
 	/* This fixes the spacing problem with some letters, like W, but not quite capital J's. */
 	margin-bottom:	-9px;
 	/* FIXME: Opera needs this:
-	margin-bottom:	0px;
+	margin-bottom:	0;
 	padding:		1px;
 	*/
 }
@@ -172,7 +172,7 @@ h1.book {
 
 /* Long book titles */
 div.book {
-	padding: 60px 0px 20px 0px;
+	padding: 60px 0 20px 0;
 }
 
 /* Main name for long book titles */
@@ -274,14 +274,14 @@ h1 {
 	font-family:	'TeX Gyre Pagella';
 	src:			local('TeX Gyre Pagella Regular'),
 					local('TeXGyrePagella-Regular'),
-					url('texgyrepagella-regular.otf') format('opentype');
+					url('texgyrepagella-regular.otf')		format('opentype');
 }
 
 @font-face {
 	font-family:	'TeX Gyre Pagella';
 	src:			local('TeX Gyre Pagella Italic'),
 					local('TeXGyrePagella-Italic'),
-					url('texgyrepagella-italic.otf') format('opentype');
+					url('texgyrepagella-italic.otf')		format('opentype');
 	font-style:		italic;
 }
 
@@ -289,7 +289,7 @@ h1 {
 	font-family:	'TeX Gyre Pagella';
 	src:			local('TeX Gyre Pagella Bold'),
 					local('TeXGyrePagella-Bold'),
-					url('texgyrepagella-bold.otf') format('opentype');
+					url('texgyrepagella-bold.otf')			format('opentype');
 					font-weight: bold;
 }
 
@@ -297,7 +297,7 @@ h1 {
 	font-family:	'TeX Gyre Pagella';
 	src:			local('TeX Gyre Pagella Bold Italic'),
 					local('TeXGyrePagella-BoldItalic'),
-					url('texgyrepagella-bolditalic.otf') format('opentype');
+					url('texgyrepagella-bolditalic.otf')	format('opentype');
 	font-weight:	bold;
 	font-style: 	italic;
 }
@@ -307,14 +307,14 @@ h1 {
 	font-family:	'Bitstream Vera Sans';
 	src:			local('Bitstream Vera Sans'),
 					local('BitstreamVeraSans'),
-					url('fonts/Vera.ttf') format('truetype');
+					url('fonts/Vera.ttf')					format('truetype');
 }
 
 @font-face {
 	font-family:	'Bitstream Vera Sans';
 	src:			local('Bitstream Vera Sans Oblique'),
 					local('BitstreamVeraSans-Oblique'),
-					url('fonts/VeraIt.ttf') format('truetype');
+					url('fonts/VeraIt.ttf')					format('truetype');
 	font-style:		italic;
 }
 
@@ -322,7 +322,7 @@ h1 {
 	font-family:	'Bitstream Vera Sans';
 	src:			local('Bitstream Vera Sans Bold'),
 					local('BitstreamVeraSans-Bold'),
-					url('fonts/VeraBd.ttf') format('truetype');
+					url('fonts/VeraBd.ttf')					format('truetype');
 	font-weight:	bold;
 }
 
@@ -330,7 +330,7 @@ h1 {
 	font-family:	'Bitstream Vera Sans';
 	src:			local('Bitstream Vera Sans Bold Oblique'),
 					local('BitstreamVeraSans-BoldOblique'),
-					url('fonts/VeraBI.ttf') format('truetype');
+					url('fonts/VeraBI.ttf')					format('truetype');
 	font-weight:	bold;
 	font-style:		italic;
 }
