Minor CSS update.
Move the text in the infobar over so that it is not flush with the edge of the screen.

--- a/styles/base.css
+++ b/styles/base.css
@@ -61,6 +61,8 @@ body {
     border-top: 	#EEE999 solid 1px;
     border-bottom:	#EEE999 solid 1px;
     
+    padding-left: 3px;
+    
     width:  100%;
     height: 18px;
     
